--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,27 @@
 .splash {
+  /* width: 100vw; */
+  height: 100%;
+  margin: -8px;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container {
+  border-radius: 5px;
+  margin: 8vw;
+}
+
+section {
   width: 100vw;
+  height: 100vh;
+}
+
+.head {
+  padding: 20px;
+  font-weight: normal;
+  text-align: center;
+  background-color: rgba(242,242,242,.9);
+
 }
