better playlist controls and spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,19 +34,28 @@ section {
   border-radius: 20px;
 }
 
+.audio {
+  margin-left: 25vw;
+  width: 50vw;
+}
+span {
+    text-align: center;
+}
+
 .plyr__controls {
   padding: 5px;
   border-radius: 20px;
-  margin-left: 25vw;
+
 }
 
 .playlistItem {
-  margin-left: 25vw;
   background-color: rgba(222,222,222,.8);
   text-align: center;
   padding: 2px;
 
-
+}
+.playlistControls {
+margin-inline-start: 15vw;
 }
 .playlistButtons {
   display: inline-flex;
