--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,10 @@ span {
     text-align: center;
 }
 
+.playing {
+  color: rgba(50,50,255,1);
+}
+
 .plyr__controls {
   padding: 5px;
   border-radius: 20px;
