--- a/src/styles.css
+++ b/src/styles.css
@@ -64,3 +64,21 @@ margin-inline-start: 15vw;
 .playlistButtons {
   display: inline-flex;
 }
+
+#calendar {
+  table {
+      border-collapse: collapse;
+      border-spacing: 0;
+      width: 100%;
+      border: 1px solid #ddd;
+  }
+
+  th, td {
+      text-align: left;
+      padding: 8px;
+  }
+
+  tr:nth-child(even){background-color: #ffffff}
+
+  tr:nth-child(odd){background-color: #eeeeee}
+}
